# daily-scrum-bot

./: .coveragerc  .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
daily_scrum_bot/: __main__.py  main.py  settings.py
daily_scrum_bot/bot/: __init__.py  ds_bot.py
daily_scrum_bot/bot/handlers/: __init__.py
daily_scrum_bot/bot/handlers/start_handler/: __init__.py  start_pv.py  start_pv_texts.py
daily_scrum_bot/commands/: __init__.py  user_command.py
daily_scrum_bot/data/: __init__.py
daily_scrum_bot/data/models/: __init__.py  user_model.py
tests/: test_daily_scrum_bot.py
